Break up first sentense paragraph two...more readable. Fix btn styling affecting hamburger menu.

--- a/about.css
+++ b/about.css
@@ -19,7 +19,7 @@ main {
     overflow-y: visible;
 }
 
-a {
+.btn {
     text-decoration: none;
     color: var(--light-color);
     cursor: pointer;
